# ThriftLM

./: .gitignore  Claude.md  LICENSE  README.md  ThriftLM_V2_v0.3_Corrections_Memo.docx  debugged.txt  docker-compose.yml  pyproject.toml  thriftlm_v1_ai_coding_challenges.docx  thriftlm_v2_low_level_rundown.docx  thriftlm_v2_spec_v04.docx
api/: auth.py  db.py  main.py
api/routes/: __init__.py  cache.py  keys.py  metrics.py
dashboard/: index.html
demo/: README.md  simulate.py
docs/: index.html
scratch/: openai_test.py  populate_test.py  qqp_benchmark.py  smoke_test.py  wait_docker.ps1
scripts/: debug_v2_lookup.py  extract_and_store.py  seed_v2_plans.py  smoke_v2_lookup.py
supabase/: setup.sql
tests/: test_api.py  test_cache.py  test_cli.py  test_embedder.py  test_privacy.py  test_redis_backend.py  test_supabase_backend.py  test_v2_adapter.py  test_v2_adapters.py  test_v2_canonicalization_cache.py  test_v2_extract_and_store.py  test_v2_extractor.py  test_v2_intent.py  test_v2_plan_cache.py  test_v2_server.py  test_v2_validator.py
thriftlm/: __init__.py  _server.py  cache.py  cli.py  config.py  embedder.py  privacy.py
thriftlm/backends/: __init__.py  local_index.py  redis_backend.py  supabase_backend.py
thriftlm/integrations/: __init__.py  langgraph.py
thriftlm/static/: dashboard.html
thriftlm/v2/: _server.py  adapter.py  canonicalization_cache.py  extractor.py  intent.py  plan_cache.py  schemas.py  validator.py
thriftlm/v2/adapters/: __init__.py  base.py  generic.py
